--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@ body{
 
 .container p,
 .container li {
-    font-size: 1.25em;
+    font-size: 1.2em;
+    line-height: 1.48;
 }
 
 /* Navbar */
@@ -17,7 +18,6 @@ body{
     box-shadow: none;
     -webkit-box-shadow: none;
     width:100%;
-    height:69px;
     background: #eeeeee;
 }
 
@@ -79,11 +79,16 @@ body{
 
 /*******/
 
+.header {
+    background: url(../images/mars_discovery_district_workspace.jpg) center no-repeat;
+}
+
 li {
     line-height: inherit;
 }
 
-ol.para li {
+ol.para li,
+ul.para li {
     margin-bottom: 10px;
 }
 
@@ -106,6 +111,7 @@ a:hover {
     line-height: 1.5;
     text-align: center;
     color: #00AEEF;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.6);
 }
 
 .jumbotron h2 {
@@ -113,7 +119,7 @@ a:hover {
     font-size: 20px;
     text-transform: uppercase;
     font-family: "Montserrat", sans-serif;
-    color: #666;
+    color: #FFF;
 }
 
 @media screen and (min-width: 768px) {
@@ -122,6 +128,18 @@ a:hover {
     }
     .jumbotron h2 {
         font-size: 	30px;
+    }
+    .navbar {
+        min-height: 69px;
+    }
+    .navbar-nav {
+        float: right;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .jumbotron {
+        padding: 30px 0;
     }
 }
 
@@ -167,12 +185,6 @@ h5 {
 h5 a{
 	text-decoration:none;
 	color:#3b3b3b;	
-}
-
-ul{
-	margin:0px;
-	padding:0px;
-	list-style:none;	
 }
 
 .button {
@@ -293,6 +305,12 @@ blockquote cite:before {
 
 .program-summary {
  text-align: center;
+ color: #fff;
+ padding-top: 30px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 
 .program-summary p {
