--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
 @charset "utf-8";
 /* CSS Document */
 
+* {
+    -webkit-font-smoothing: antialiased;
+}
+
 body{
 	margin:0px;
-	font-family: 'Lato', sans-serif;
+	font-family: "Lato", sans-serif;
+    font-weight: normal;
 }
 
 .container p,
@@ -124,7 +129,7 @@ a:hover {
     font-size: 20px;
     text-transform: uppercase;
     font-family: "Montserrat", sans-serif;
-    color: #FFF;
+    color: #FFFFFF;
 }
 
 @media screen and (min-width: 768px) {
@@ -192,22 +197,40 @@ a:hover {
     text-decoration: underline;
 }
 
-.brand-wrapper {
-    margin-left: 90px;
-    margin-top: 20px;
+.brand-wrapper a:hover {
+    text-decoration: none;
+}
+
+.brand-outer-wrapper a img {
+    margin-right: 3%;
+    margin-top: 5%;
 }
 
 h1.office-brand {
     text-align: left;
-    color: white;
+    color: #FFF;
     padding: 0;
     margin: 0;
+    font-size: 15px;
+    font-family: "Montserrat", sans-serif;
+    text-transform: uppercase;
+    font-weight: normal;
+    line-height: 21px;
+}
+
+.brand-outer-wrapper {
+    float: left;
+    z-index: 100;
+    position: relative;
+    width: 70%;
+    margin-top: 30px;
+    margin-bottom: 10px;
 }
 
 .office-brand-lead {
     margin: 0;
-    padding: 0;
-    color: #fff;
+    padding-top: 6%;
+    color: #FFF;
 }
 
 h1{
@@ -258,7 +281,7 @@ h5 a{
 	width:240px;
 	height:65px;
 	font-size: 28px;
-	font-family: 'lato', 'Helvetica Neue', 'Helvetica Neue Medium', 'HelveticaNeue LT 65 Medium';;
+	font-family: "Lato", 'Helvetica Neue', 'Helvetica Neue Medium', 'HelveticaNeue LT 65 Medium';;
 	text-align:center;
 	font-weight:bold;
 	cursor:pointer;	
@@ -280,7 +303,7 @@ h5 a{
 	width:240px;
 	height:65px;
 	font-size: 28px;
-	font-family: 'lato', 'Helvetica Neue', 'Helvetica Neue Medium', 'HelveticaNeue LT 65 Medium';;
+	font-family: "Lato", 'Helvetica Neue', 'Helvetica Neue Medium', 'HelveticaNeue LT 65 Medium';;
 	text-align:center;
 	font-weight:bold;
 	cursor:pointer;	
@@ -386,4 +409,11 @@ blockquote cite:before {
 
 .program-summary img {
     padding-bottom: 20px;
+}
+
+a img:hover{
+    filter:alpha(opacity=90);
+    -moz-opacity:0.9;
+    -khtml-opacity: 0.9;
+    opacity: 0.9;
 }
