--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,9 @@ a:hover {
     h2 {
         font-size: 20px;
     }
+    h3.deadline {
+        font-size: 16px;
+    }
     h1.office-brand {
         font-size: 18px;
     }
@@ -218,6 +221,12 @@ h1.office-brand {
     line-height: 21px;
 }
 
+h3.deadline {
+    font-size: 20px;
+    font-family: "Lato", sans-serif;
+    line-height: 1;
+}
+
 .brand-outer-wrapper {
     float: left;
     z-index: 100;
@@ -255,9 +264,6 @@ h3{
 	color:#fff;
 	font-weight:normal;
 	text-align:center;
-	height:61px;
-	padding-top:3px;
-	line-height: 43px;
 }
 
 h4 {
