--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,7 @@ a:hover {
 
 .jumbotron {
     background: none;
+    margin-bottom: 0;
 }
 
 .jumbotron > .container {
@@ -340,6 +341,16 @@ h5 a{
 	height:auto;
 }
 
+#cohort-logos div {
+    text-align: center;
+    display: block;
+    height: 200px;
+}
+
+#cohort-logos img {
+    max-width: 225px;
+}
+
 #footer {
     background: #0076A2;
 }
@@ -357,16 +368,18 @@ h5 a{
 }
 
 
+.mayor-img {
+    margin-right: 30px;
+}
+
 blockquote {
-    font-size: 2em;
-    background:#f9f9f9;
-    border-left:10px solid #ccc;
-    margin:1.5em 10px;
-    padding:.5em 10px;
+    color: #f8f8f8;
+    font-size: 1.6em;
+    border-left: none;
     quotes:"\201C""\201D""\2018""\2019";
 }
 blockquote:before {
-    color:#ccc;
+    color:#fff;
     font-family: Georgia, serif;
     content:"\201C";
     font-size:4em;
@@ -376,7 +389,7 @@ blockquote:before {
 }
 
 blockquote cite {
-    color: #999999;
+    color: #ffffff;
     font-size: .75em;
     display: block;
     margin-top: 5px;
